--- a/gb/21/5/12/n12942453.md
+++ b/gb/21/5/12/n12942453.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/mqshdf3139/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/mqshdf3139/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/mqshdf3139/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/mqshdf3139/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/mqshdf3139/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mqshdf3139/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/mqshdf3139/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/mqshdf3139/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/mqshdf3139/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/mqshdf3139/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/mqshdf3139/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/mqshdf3139/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/mqshdf3139/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/mqshdf3139/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/mqshdf3139/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/mqshdf3139/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/mqshdf3139/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/mqshdf3139/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/mqshdf3139/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/mqshdf3139/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/mqshdf3139/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/mqshdf3139/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/mqshdf3139/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/mqshdf3139/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/mqshdf3139/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/mqshdf3139/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/mqshdf3139/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/mqshdf3139/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/mqshdf3139/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/mqshdf3139/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/mqshdf3139/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/mqshdf3139/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/mqshdf3139/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/mqshdf3139/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/mqshdf3139/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/mqshdf3139/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/mqshdf3139/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/mqshdf3139/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/mqshdf3139/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/mqshdf3139/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/mqshdf3139/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/mqshdf3139/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/mqshdf3139/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/mqshdf3139/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/mqshdf3139/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/mqshdf3139/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/mqshdf3139/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>感恩——献给法轮大法洪传29周年</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/05/id12926572-2105010556202384-600x400.jpeg" />
 <h6>约5,200名台湾法轮功学员，齐聚在中正纪念堂的自由广场，排出“贺师尊华诞暨法轮大法洪传29周年”图像。（陈柏州／大纪元）
 </h6>
 <hr>
 	<p>【大纪元2021年05月13日讯】五月，北半球的初夏，南半球的金秋，阳光照耀着一个特殊的日子。赞颂与感恩，回响四海：“恭祝师尊七十华诞”、“法轮大法好”。</p>
-<p>29年前，1992年5月13日，<ahref="https://github.com/mqshdf3139/djy/blob/master/gb/tag/%E6%9D%8E%E6%B4%AA%E5%BF%97%E5%A4%A7%E5%B8%88.md#1">李洪志大师</a>公开向世人传授法轮大法，将“真、善、忍”法理带给芸芸众生。这一天正是李洪志大师的华诞，于2000年被确立为“世界<ahref="https://github.com/mqshdf3139/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95%E6%97%A5.md#1">法轮大法日</a>”，也因此成为全球法轮功学员的节日。</p>
-<p>今年此际，贺卡和贺信纷至沓来，中国30个省、直辖市和自治区的大法弟子突破网络封锁，遥祝师尊生日快乐，表达坚定修炼的决心。众多学员家属和大陆律师等人也向<ahref="https://github.com/mqshdf3139/djy/blob/master/gb/tag/%E6%9D%8E%E6%B4%AA%E5%BF%97%E5%A4%A7%E5%B8%88.md#1">李洪志大师</a>献上敬意，感激大法的赐福和指引。</p>
-<p>在海外，美国（多位州长、联邦参议员、众议员、州议员、市长等）、加拿大、德国、澳洲等国的数百名各级政要纷纷恭贺“<ahref="https://github.com/mqshdf3139/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95%E6%97%A5.md#1">法轮大法日</a>”，褒扬李洪志大师与法轮大法对社会的贡献，支持法轮功学员追求信仰自由。</p>
+<p>29年前，1992年5月13日，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9D%8E%E6%B4%AA%E5%BF%97%E5%A4%A7%E5%B8%88.md#1">李洪志大师</a>公开向世人传授法轮大法，将“真、善、忍”法理带给芸芸众生。这一天正是李洪志大师的华诞，于2000年被确立为“世界<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95%E6%97%A5.md#1">法轮大法日</a>”，也因此成为全球法轮功学员的节日。</p>
+<p>今年此际，贺卡和贺信纷至沓来，中国30个省、直辖市和自治区的大法弟子突破网络封锁，遥祝师尊生日快乐，表达坚定修炼的决心。众多学员家属和大陆律师等人也向<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9D%8E%E6%B4%AA%E5%BF%97%E5%A4%A7%E5%B8%88.md#1">李洪志大师</a>献上敬意，感激大法的赐福和指引。</p>
+<p>在海外，美国（多位州长、联邦参议员、众议员、州议员、市长等）、加拿大、德国、澳洲等国的数百名各级政要纷纷恭贺“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95%E6%97%A5.md#1">法轮大法日</a>”，褒扬李洪志大师与法轮大法对社会的贡献，支持法轮功学员追求信仰自由。</p>
 <p>盛大、热烈的庆祝活动，在世界名城展开，从台北、东京到首尔，从斯德哥尔摩、赫尔辛基到苏黎世，从伦敦、柏林到巴黎、米兰，从墨尔本到奥克兰，从渥太华到多伦多，再到旧金山、洛杉矶、芝加哥、纽约、华盛顿DC，炼功队列再展祥和，天国乐团再奏华章，驱散疫情阴影，令观者心头一震、眼前一亮。</p>
 <p>古往今来，如此厚重、诚挚的感佩，如此坚定不移的追随，超越地域和种族，持久不衰，几人能得？</p>
 <h2><strong>李洪志大师无私付出 赐福人生与社会</strong></h2>
@@ -44,9 +44,9 @@
 <p>另一方面，法轮大法对修炼者身心健康的改善效果以及对宇宙真相的诠释都突破了固有的“科学”框框，开拓出更加广阔的探索空间和思路，可谓开辟了未来科学的洞天。</p>
 <p>法轮大法从多个层面展示了非凡，正是“扶社稷”、“济苍生”的高德大法。目前，越来越多的中西方人士认识到这部功法的可贵及其对人类社会的意义。</p>
 <p>日前，明慧网发表了山东省招远市蚕庄镇一家四名大法弟子和十位家属及两户邻居致李洪志大师的贺信，其中邻居说：“现在社会从中共高层到地方村委书记层层腐败，个个贪腐，共产党烂透了。感谢大法师父传出这么好的法，给人一份希望。如果中共不镇压，人人都修大法，这个社会该多好啊！”</p>
-<p>湖南省靖州县一位企业主经常翻墙看真相，他向“<ahref="https://github.com/mqshdf3139/djy/blob/master/gb/tag/%E4%B8%96%E7%95%8C%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95%E6%97%A5.md#1">世界法轮大法日</a>”贺喜写道：“我现在深刻地感受到中共的恶和大法的善在世间表现得越来越明显。我由衷地敬佩大法弟子在海外办的媒体十年如一日向全世界传播着真相，秉承道德传统，这是大善的胸怀”，“希望更多善良百姓能得到大法的福佑，给自己和家人选择一个美好的未来。”</p>
+<p>湖南省靖州县一位企业主经常翻墙看真相，他向“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%96%E7%95%8C%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95%E6%97%A5.md#1">世界法轮大法日</a>”贺喜写道：“我现在深刻地感受到中共的恶和大法的善在世间表现得越来越明显。我由衷地敬佩大法弟子在海外办的媒体十年如一日向全世界传播着真相，秉承道德传统，这是大善的胸怀”，“希望更多善良百姓能得到大法的福佑，给自己和家人选择一个美好的未来。”</p>
 <p>韩国大法弟子、女法官金松表示，“修炼让我能够明确分辨善恶，不受诸多因素干扰，给了我不随波逐流的力量。”“现在可以说是无法无天的时代，即使有法律，也没人想被法律约束，只是在利用它。而在混沌复杂的当今社会，师父将这部法拿出来，支撑着这个世间。”“大法是世界上唯一的希望，如果没有大法，这个世界会下滑到什么程度是不可想像的。”</p>
-<p>今年“5?13”前夕，澳洲联邦参议员阿贝兹（Eric Abetz）恭贺“<ahref="https://github.com/mqshdf3139/djy/blob/master/gb/tag/%E4%B8%96%E7%95%8C%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95%E6%97%A5.md#1">世界法轮大法日</a>”时表示，“法轮大法修炼者坚定地反对中共的迫害，大大有助于揭露共产党的本质”，他们“追求自由的决心和毅力令人感动和鼓舞”，“让我们与法轮功学员这样勇敢的人并肩为自由而战”。</p>
+<p>今年“5?13”前夕，澳洲联邦参议员阿贝兹（Eric Abetz）恭贺“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%96%E7%95%8C%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95%E6%97%A5.md#1">世界法轮大法日</a>”时表示，“法轮大法修炼者坚定地反对中共的迫害，大大有助于揭露共产党的本质”，他们“追求自由的决心和毅力令人感动和鼓舞”，“让我们与法轮功学员这样勇敢的人并肩为自由而战”。</p>
 <p>5月8日，在墨尔本庆祝“法轮大法日”的集会上，澳洲国家公民委员会前主席、《新闻周刊》（News Weekly）主要撰稿人威斯特摩尔（Peter Westmore）先生发言说：“法轮大法舒缓的功法以及打坐有益于人的身心健康。这一功法的重要性在西方社会被低估了”，“我认为，‘真、善、忍’原则是任何社会中的每一个人都应该遵循的价值观。所以，法轮功学员不只是在中国，而是在全世界都做了一件非常好的事情，向世人展示何为善良的人生”。</p>
 <p>墨尔本《天安门时报》社长阮杰先生说：“一九九九年，前中共党魁江泽民宣称三个月内铲除法轮大法，但今天您可以看到共产党政权、共产党自身无处可去，到处碰壁，但法轮大法却在全世界遍地开花，因为法轮大法的价值理念对我们有益，对整个世界都有益。”“我相信，法轮大法将为中国历史做出巨大贡献，也会为将来中国人回归正常社会做出巨大贡献。”</p>
 <p>同一天，在美国旧金山，美发师塞尔吉奥·马丁内斯（Sergio Martinez）观看法轮功学员炼功时表示，“非常感谢你们在户外展示这么美好的功法，带给我们希望！”“如果全人类都能秉持着‘真、善、忍’为做人的基本原则，那世界就会更美好。”</p>
@@ -60,41 +60,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/5/10/n12937442.md#1">英国法轮功学员集会庆祝世界法轮大法日</a></li>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/5/11/n12938320.md#1">庆祝法轮大法日 韩国法轮功学员感恩师尊</a></li>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/5/11/n12940062.md#1">长春法轮功学员恭贺世界法轮大法日暨李洪志大师华诞(20条)</a></li>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/5/11/n12940066.md#1">中国50余行业法轮功学员同贺世界法轮大法日</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/5/10/n12937442.md#1">英国法轮功学员集会庆祝世界法轮大法日</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/5/11/n12938320.md#1">庆祝法轮大法日 韩国法轮功学员感恩师尊</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/5/11/n12940062.md#1">长春法轮功学员恭贺世界法轮大法日暨李洪志大师华诞(20条)</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/5/11/n12940066.md#1">中国50余行业法轮功学员同贺世界法轮大法日</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/29/n11011288.md#1" target="_blank">林辉：西安军事叛变前夜毛收到张杨密电</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/12/n10846893.md#1" target="_blank">律师依法为法轮功做无罪辩护 遭中共打压</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/1/n9913343.md#1" target="_blank">淳子：闺秀文革自杀名单</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/16/n11525726.md#1" target="_blank">密州狂欢节 市长：法轮大法给世界带来美好</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/5/4/n12923553.md#1">《推背图》预言大戏尾声的丰碑事件</a></li>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/5/4/n12924345.md#1">【未解之谜】五台山之谜：清凉胜地的秘密</a></li>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/5/4/n12922723.md#1">【命理】哪一种命的人生最为舒适？</a></li>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/4/30/n12916967.md#1">现实与梦境交叠？前世出家为僧 今生入世为官</a></li>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/5/7/n12931723.md#1">【未解之谜】科学聚焦：人的意念对植物有影响</a></li>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/5/12/n12942795.md#1">【直播】国际宗教自由报告发布 布林肯讲话</a></li>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/5/12/n12943198.md#1">【微视频】高中生坠楼女大生上吊 自杀或他杀？</a></li>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/5/11/n12940559.md#1">【财商天下】日本味精绝活 称霸全球晶片</a></li>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/5/10/n12936426.md#1">武汉午后白昼如夜 暴雨倾盆 网民：太吓人</a></li>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/5/10/n12937748.md#1">再陷刹车风波 Tesla：事发时油门被深度踩下</a></li>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/5/10/n12937860.md#1">消息：盖茨夫妇离婚 与会晤爱泼斯坦有关</a></li>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/5/9/n12935234.md#1">吴尊庆母亲节晒妈妈照片 网友惊叹婆媳相像</a></li>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/5/10/n12937591.md#1">被命理师预言晚婚 萧敬腾认真回复引热议</a></li>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/5/10/n12936096.md#1">(G)I-DLE四成员开设个人IG 舒华简介“很舒华”</a></li>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/5/10/n12937846.md#1">章子怡晒夫妻合照庆纪念日 继女一举动显亲子情</a></li>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/5/11/n12940428.md#1">阿娇身材发福引热议 一日五餐以上吃到吐</a></li>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/5/10/n12937122.md#1">咖啡有哪些优缺点？专家告诉你</a></li>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/5/9/n12933892.md#1">知名传染病专家打2剂疫苗 染疫离世 专家析原因</a></li>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/5/10/n12937111.md#1">吃香蕉可以减肥 营养学家建议每天一根</a></li>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/5/10/n12936099.md#1">史上第一人 尼泊尔男子登上圣母峰25次</a></li>
-<li><a href="https://github.com/mqshdf3139/djy/blob/master/gb/21/5/10/n12938105.md#1">【重播】印度死亡惨烈 缺医生缺氧气 如何自救？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616642.md#1">【新闻大家谈】“取胜三关键”俄乌各占几成？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607982.md#1">迷走神经：最长脑神经 刺激它能让你更健康</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/mqshdf3139/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/mqshdf3139/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/5/12/n12942453.htm">感恩——献给法轮大法洪传29周年</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/5/12/n12942453.htm">感恩——献给法轮大法洪传29周年</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/mqshdf3139/djy/blob/master/gb/21/5/12/n12942453.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/mqshdf3139/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mqshdf3139/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/mqshdf3139/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/mqshdf3139/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/mqshdf3139/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mqshdf3139/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/mqshdf3139/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mqshdf3139/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/mqshdf3139/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mqshdf3139/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/mqshdf3139/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mqshdf3139/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/mqshdf3139/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mqshdf3139/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/mqshdf3139/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mqshdf3139/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/mqshdf3139/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mqshdf3139/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/mqshdf3139/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mqshdf3139/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/mqshdf3139/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mqshdf3139/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/mqshdf3139/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mqshdf3139/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/mqshdf3139/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mqshdf3139/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/mqshdf3139/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mqshdf3139/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/mqshdf3139/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mqshdf3139/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/mqshdf3139/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mqshdf3139/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/mqshdf3139/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mqshdf3139/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/mqshdf3139/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mqshdf3139/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/mqshdf3139/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mqshdf3139/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/mqshdf3139/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mqshdf3139/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/mqshdf3139/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mqshdf3139/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/mqshdf3139/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mqshdf3139/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/mqshdf3139/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mqshdf3139/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/mqshdf3139/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mqshdf3139/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/5/12/n12942453.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
