--- a/gb/21/11/30/n13408642.md
+++ b/gb/21/11/30/n13408642.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kgszny3862/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kgszny3862/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kgszny3862/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kgszny3862/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kgszny3862/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kgszny3862/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kgszny3862/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kgszny3862/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kgszny3862/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kgszny3862/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kgszny3862/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kgszny3862/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kgszny3862/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kgszny3862/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kgszny3862/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kgszny3862/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kgszny3862/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kgszny3862/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kgszny3862/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kgszny3862/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kgszny3862/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kgszny3862/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kgszny3862/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kgszny3862/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kgszny3862/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kgszny3862/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kgszny3862/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kgszny3862/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kgszny3862/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kgszny3862/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kgszny3862/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kgszny3862/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kgszny3862/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kgszny3862/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kgszny3862/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kgszny3862/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kgszny3862/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kgszny3862/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kgszny3862/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kgszny3862/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kgszny3862/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kgszny3862/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kgszny3862/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kgszny3862/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kgszny3862/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kgszny3862/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kgszny3862/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>边境将进一步收紧？特鲁多：采取新措施应对Omicron</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/12/id13408650-CP134672021-600x400.jpg" />
 <h6>特鲁多周二表示，为减缓Omicron变种病毒的传播，加拿大将需要做更多的事情。（Justin Tang/加通社）
@@ -10,18 +10,18 @@
 <p>据CBC报导，特鲁多在国会山与内阁成员开会前对记者简短地说，政府正在 “非常、非常密切地 ”关注Omicron变种。</p>
 <p>特鲁多说：“尽管加拿大现在有非常强有力的边境措施，需要接种疫苗才能来到加拿大，需要进行出发前的测试，需要在抵达加拿大时进行测试，但我们可能需要做更多的事情，我们将非常仔细地观察它。”特鲁多说。</p>
 <p>目前还不清楚特鲁多是否暗示抵达加拿大时进行病毒测试将成为回国旅行者的新规范。根据目前的旅行制度，入境旅行者需要出示在抵达加拿大之前进行的COVID-19分子测试的阴性证明，但只有少数旅行者被随机挑选出来进行抵达后的病毒测试。</p>
-<p>一些省长，如安省省长道格-福特一直敦促渥太华对所有抵达加拿大的旅客进行抵达点检测，无论他们来自哪里。</p>
+<p>一些省长，如安省省长道格·福特一直敦促渥太华对所有抵达加拿大的旅客进行抵达点检测，无论他们来自哪里。</p>
 <p>从周二开始，加拿大已经取消了对短期穿越加美边境的加拿大公民和永久居民的出发前分子测试要求。如果符合条件的旅行者离开加拿大不到72小时，从美国重新进入加拿大就不需要进行检测。</p>
 <p>尽管来自一些商业和旅游团体的压力，加拿大迄今仍对所有其他旅行者保持着出发返回加拿大前的分子测试要求。</p>
 <p>当被问及是否会有更多边境限制时，卫生部长杜克洛（Jean-Yves Duclos）告诉记者，在与内阁同事会谈之前，他不能说更多。</p>
 <h2>莫德纳公司：疫苗效力大打折扣</h2>
 <p>Omicron变体之所以引人注目是因为它有大量的突变，这可能会影响其传播性和COVID-19疫苗的效果。</p>
 <p>莫德纳（Moderna）公司首席执行官班塞尔（Stephane Bancel）在接受英国《金融时报》采访时预测，现有的疫苗在应对Omicron方面的效果将大打折扣。</p>
-<p>他说：“我认为，再怎么样都不会和对付Delta时是一样的（效果）。我认为，会明确下降。我还不知道多少，得等数据出来。但跟我谈过的科学家…都说不会好到哪里。”</p>
+<p>他说：“我认为，再怎么样都不会和对付Delta时是一样的（效果）。我认为，会明确下降。我还不知道多少，得等数据出来。但跟我谈过的科学家都说不会好到哪里。”</p>
 <p>虽然莫德纳公司的领导层对针对Omicron变种的疫苗的有效性表示担忧，但与辉瑞公司联合开发疫苗的BioNtech公司创始人沙欣（Ugur Sahin）周二说，虽然新的变体可能导致更多的感染，但完全接种疫苗的人很可能仍然会受到保护，不会出现严重疾病。</p>
 <p>“我们的信息是，不要吓坏了，计划仍然是一样的。加快注射第三针加强剂的速度。”他告诉《华尔街日报》。</p>
 <p>不过，班塞尔指出，科学家担心，Omicron变种病毒50个突变中的32个是在棘蛋白，这正是疫苗锁定来提升人体免疫系统的重点。他表示，大多数专家认为，这种高突变的变种病毒一、两年不至再度出现。</p>
-<p>他也表示，专付对付Omicron的疫苗要花几个月的时间才能大量生产，莫德纳“和辉瑞无法下周就生产出10剂…但能在夏天前生产几十亿剂吗？当然可以。”</p>
+<p>他也表示，专门对付Omicron的疫苗要花几个月的时间才能大量生产，莫德纳“和辉瑞无法下周就生产出10剂，但能在夏天前生产几十亿剂吗？当然可以。”</p>
 <p>多伦多综合医院的传染病专家和研究员博格奇（Isaac Bogoch）博士说，加拿大人不应该迷信疫苗公司CEO的每一句话。</p>
 <p>他说：“我想听听做实际研究的科学家们的意见，他们的想法和他们看到的情况。”他补充说，在未来几周内，关于疫苗的功效将会更加清晰。</p>
 <p>责任编辑：严枫</p>
@@ -30,47 +30,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/kgszny3862/djy/blob/master/gb/21/11/28/n13404554.md#1">应对新变种病毒 加拿大对非洲7国实行旅行禁令</a></li>
-<li><a href="https://github.com/kgszny3862/djy/blob/master/gb/21/12/1/n13408409.md#1">忧新病毒 香港12月2日起禁加拿大游客入境</a></li>
-<li><a href="https://github.com/kgszny3862/djy/blob/master/gb/21/11/30/n13408273.md#1">购物被多收钱 找商家理论能享受折扣甚至免费</a></li>
-<li><a href="https://github.com/kgszny3862/djy/blob/master/gb/21/11/29/n13406610.md#1">Omicron变种传播快 加拿大经济前景难测</a></li>
-<li><a href="https://github.com/kgszny3862/djy/blob/master/gb/21/11/30/n13406475.md#1">回国航班取消 加国少年女子曲棍球队被困南非</a></li>
-<li><a href="https://github.com/kgszny3862/djy/blob/master/gb/21/11/30/n13406527.md#1">Omicron变种病毒袭来 加国参加七国紧急卫生会议</a></li>
-<li><a href="https://github.com/kgszny3862/djy/blob/master/gb/21/11/30/n13406574.md#1">新变种病毒出现 加国打算外出度假者恐慌</a></li>
-<li><a href="https://github.com/kgszny3862/djy/blob/master/gb/21/11/30/n13406662.md#1">洪水切断铁路和公路 温哥华港船只动弹不得</a></li>
-<li><a href="https://github.com/kgszny3862/djy/blob/master/gb/21/11/29/n13406532.md#1">加拿大旅行新措施周二生效 旅客须完全接种疫苗</a></li>
-<li><a href="https://github.com/kgszny3862/djy/blob/master/gb/21/11/29/n13406530.md#1">从加国飞香港旅客染新变种 已接种辉瑞疫苗</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/11/28/n13404554.md#1">应对新变种病毒 加拿大对非洲7国实行旅行禁令</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614695.md#1">加拿大希望国际刑事法庭调查俄罗斯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/1/17/n13509923.md#1">加拿大各省最新疫情数据 （3月1日）</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13614652.md#1">加拿大经济年增长率达6.7% 料央行调高利率</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614589.md#1">加国向乌克兰提供1亿元人道援助 扩大制裁俄国</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614561.md#1">俄乌冲突后 四千乌克兰人获批移民来加</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614531.md#1">违反航空禁令 两俄罗斯飞机被令离开加国领空</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614548.md#1">预计今年加拿大春天“气温似过山车”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614331.md#1">多大报告：促加政府保护移民免受外国政府攻击</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614153.md#1">民调：过半加拿大人无力应对物价飙升</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/31/n9788075.md#1" target="_blank">你不了解的邓小平：反右运动总指挥（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/12/11/n8581915.md#1" target="_blank">76岁中医求道40年终获至宝 发乌黑身如燕</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/10/n10966582.md#1" target="_blank">林辉：文革一个为妻子报仇的普通军人之死</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/11/n11250223.md#1" target="_blank">美国北德州十城市宣布 法轮大法日</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/kgszny3862/djy/blob/master/gb/21/11/23/n13393809.md#1">【百年真相】公安局长扬帆被失踪 25年音信全无</a></li>
-<li><a href="https://github.com/kgszny3862/djy/blob/master/gb/21/11/23/n13393853.md#1">【未解之谜】漆黑太空背后的宇宙秘密</a></li>
-<li><a href="https://github.com/kgszny3862/djy/blob/master/gb/21/11/21/n13389701.md#1">清朝转世奇闻 才子前世或是毒龙</a></li>
-<li><a href="https://github.com/kgszny3862/djy/blob/master/gb/21/11/23/n13392680.md#1">“指名道姓”为何是粗鲁无礼的行为？</a></li>
-<li><a href="https://github.com/kgszny3862/djy/blob/master/gb/21/11/19/n13386938.md#1">【百年真相】80岁被逼扫街 梁启超夫人文革受辱</a></li>
-<li><a href="https://github.com/kgszny3862/djy/blob/master/gb/21/11/29/n13406417.md#1">【新闻看点】Omicron疫苗可量产 科兴又抢先机？</a></li>
-<li><a href="https://github.com/kgszny3862/djy/blob/master/gb/21/11/29/n13406076.md#1">【微视频】赌王周焯华被查 揭红电影洗脑又洗钱</a></li>
-<li><a href="https://github.com/kgszny3862/djy/blob/master/gb/21/11/29/n13406233.md#1">【直播】拜登就Omicron最新情况发表讲话</a></li>
-<li><a href="https://github.com/kgszny3862/djy/blob/master/gb/21/11/28/n13404188.md#1">周田：美军哪些武器令中共军队难以应对（三）</a></li>
-<li><a href="https://github.com/kgszny3862/djy/blob/master/gb/21/11/28/n13403484.md#1">越狱潜逃40天 朝鲜籍重刑犯被抓 细节曝光</a></li>
-<li><a href="https://github.com/kgszny3862/djy/blob/master/gb/21/11/28/n13403356.md#1">【时事军事】美军最新格斗导弹 将阻断中共挑战</a></li>
-<li><a href="https://github.com/kgszny3862/djy/blob/master/gb/21/11/28/n13404367.md#1">霍建华客串林心如新剧 获赞“拐个弯秀恩爱”</a></li>
-<li><a href="https://github.com/kgszny3862/djy/blob/master/gb/21/11/27/n13402696.md#1">《时代革命》获金马最佳纪录片 全场鼓掌逾10秒</a></li>
-<li><a href="https://github.com/kgszny3862/djy/blob/master/gb/21/11/27/n13402284.md#1">《瀑布》58金马大赢家 贾静雯不负众望摘影后</a></li>
-<li><a href="https://github.com/kgszny3862/djy/blob/master/gb/21/11/29/n13406739.md#1">演少女角色被嫌老 43岁刘涛自信回应</a></li>
-<li><a href="https://github.com/kgszny3862/djy/blob/master/gb/21/11/28/n13404481.md#1">《时代革命》荣膺金马奖 香港网友：感谢台湾</a></li>
-<li><a href="https://github.com/kgszny3862/djy/blob/master/gb/21/11/24/n13396621.md#1">维生素E预防心脏病最有效 这样搭配更好</a></li>
-<li><a href="https://github.com/kgszny3862/djy/blob/master/gb/21/11/28/n13403633.md#1">2岁儿子患绝症 云南男子在家设实验室制药</a></li>
-<li><a href="https://github.com/kgszny3862/djy/blob/master/gb/21/11/28/n13403458.md#1">美国男子冤狱43年终获释 捐款助他成富翁</a></li>
-<li><a href="https://github.com/kgszny3862/djy/blob/master/gb/21/11/27/n13402484.md#1">让地毯重新变干净蓬松的简单方法</a></li>
-<li><a href="https://github.com/kgszny3862/djy/blob/master/gb/21/11/27/n13402465.md#1">6类快乐食物 让你远离压力和忧郁症</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616642.md#1">【新闻大家谈】“取胜三关键”俄乌各占几成？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607982.md#1">迷走神经：最长脑神经 刺激它能让你更健康</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kgszny3862/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kgszny3862/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/11/30/n13408642.htm">边境将进一步收紧？特鲁多：采取新措施应对Omicron</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/11/30/n13408642.htm">边境将进一步收紧？特鲁多：采取新措施应对Omicron</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kgszny3862/djy/blob/master/gb/21/11/30/n13408642.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kgszny3862/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgszny3862/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kgszny3862/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kgszny3862/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kgszny3862/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgszny3862/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kgszny3862/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgszny3862/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kgszny3862/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgszny3862/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kgszny3862/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgszny3862/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kgszny3862/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgszny3862/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kgszny3862/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgszny3862/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kgszny3862/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgszny3862/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kgszny3862/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgszny3862/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kgszny3862/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgszny3862/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kgszny3862/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgszny3862/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kgszny3862/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgszny3862/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kgszny3862/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgszny3862/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kgszny3862/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgszny3862/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kgszny3862/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgszny3862/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kgszny3862/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgszny3862/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kgszny3862/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgszny3862/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kgszny3862/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgszny3862/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kgszny3862/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgszny3862/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kgszny3862/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgszny3862/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kgszny3862/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgszny3862/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kgszny3862/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgszny3862/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kgszny3862/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgszny3862/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/11/30/n13408642.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
